# odsh-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/api/: channel.rs  message.rs  mod.rs  roles.rs  server.rs  structures.rs
api/src/db/: mod.rs  prelude.rs  roles.rs  server.rs  statics.rs  structures.rs
api/src/env/: mod.rs
api/src/security/: mod.rs  structures.rs
