[package]
name = "odsh-server"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0"}
actix-files = "0.6"
serde = {version="1.0.218", features=["serde_derive"]}
uuid = {version="1.15.1", features=["v7"]}
scylla = "1.0.0"
sha2 = "0.10.8"
rand = "0.9.0"
env_logger = "0.11.6"
base64 = "0.22.1"

# Improves comp time ?
[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[features]
